# ChangeLog for dev-ruby/IceRuby
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/IceRuby/Attic/ChangeLog,v 1.19 2010/06/02 07:00:42 tove Exp $

  02 Jun 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove caleb from metadata.xml (#317071)

  09 Dec 2009; Hans de Graaff <graaff@gentoo.org> -IceRuby-3.2.1-r1.ebuild:
  Remove old version.

  19 Nov 2009; Christian Faulhammer <fauli@gentoo.org> IceRuby-3.3.1.ebuild:
  stable x86, bug 282359

  13 Jun 2009; Hans de Graaff <graaff@gentoo.org> -IceRuby-3.3.0.ebuild:
  Remove old version.

*IceRuby-3.3.1 (28 Mar 2009)

  28 Mar 2009; Caleb Tennis <caleb@gentoo.org>
  +files/IceRuby-3.3.1-Makefile.patch, +IceRuby-3.3.1.ebuild:
  Version bump

*IceRuby-3.3.0 (21 May 2008)

  21 May 2008; Caleb Tennis <caleb@gentoo.org>
  +files/IceRuby-3.3.0-Makefile.patch,
  -files/IceRuby-3.3.0_beta1-Makefile.patch, -IceRuby-3.3.0_beta1.ebuild,
  +IceRuby-3.3.0.ebuild:
  version bump

*IceRuby-3.3.0_beta1 (23 Apr 2008)

  23 Apr 2008; Caleb Tennis <caleb@gentoo.org>
  +files/IceRuby-3.3.0_beta1-Makefile.patch, +IceRuby-3.3.0_beta1.ebuild:
  version bump for new ice, currently package.masked

  26 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  IceRuby-3.2.1-r1.ebuild:
  stable x86, bug #192137

  25 Sep 2007; Caleb Tennis <caleb@gentoo.org>
  +files/testing-Makefile.patch, IceRuby-3.2.1-r1.ebuild:
  Fix src_test to work properly

  25 Sep 2007; Caleb Tennis <caleb@gentoo.org> IceRuby-3.2.1-r1.ebuild:
  Fix up quoting a bit

  25 Sep 2007; Caleb Tennis <caleb@gentoo.org>
  -files/IceRuby-3.2.0-Makefile.patch, -files/cached_connection.patch,
  -IceRuby-3.2.0.ebuild, -IceRuby-3.2.0-r1.ebuild, -IceRuby-3.2.1.ebuild:
  remove old versions

*IceRuby-3.2.1-r1 (27 Aug 2007)

  27 Aug 2007; Caleb Tennis <caleb@gentoo.org>
  +files/IceRuby-3.2.1-ice_type.patch, +IceRuby-3.2.1-r1.ebuild:
  A patch to fix proxy passing via argument
