@@ -8,12 +8,12 @@ AUX IceRuby-3.3.1-Makefile.patch 3248 RMD160 274f6595e1dcce9618290b33d6f50501d97
 AUX testing-Makefile.patch 965 RMD160 57c750a551c1ae5ca3e423ae4bd01104bb07026c SHA1 c65e561ff6453a66a9090b7721db45e5bbfc9183 SHA256 4352174e0bcb2944c1f5382e57462c70572d5d66ceaea710391daa4c73158d7f
 DIST Ice-3.3.1.tar.gz 4455154 RMD160 d64d52c35640cebe1145e62f57618473d17cbeb5 SHA1 08d0f32bdb7d909b4a531d45cccfa97bdde649aa SHA256 7b90477303ea2668e8f2cc7bb4506e3a596699e092c4e622746ea42d8286abd0
 EBUILD IceRuby-3.3.1.ebuild 1295 RMD160 2ff9ece0abacd56c115070362fcc535f1a68dee1 SHA1 fe1872b4ef012711ecf3be38d334967d70c058d2 SHA256 fe6b534116be60866fcd147f3e4ffa9f01d13d8a8583faf6c5e1ca5300fb93ed
-MISC ChangeLog 3249 RMD160 b2addafc0363edd371a85dee619c8d58869668e2 SHA1 a7516533188bb050cfe71e137e6cbb3a67d57b35 SHA256 743993eae0e29fb8b454c0d36f4c83688d0e4ee7d1d2736807263331209a2d02
-MISC metadata.xml 381 RMD160 88572a135a1c2660c297dcb2a27dc14f67c3d687 SHA1 42546ec18e5714f0935938afdf3f7fe675637916 SHA256 7bfa52b0576a276af314b6358dbd0e6563489b601601b4d5b4b8ee53b5e281d8
+MISC ChangeLog 3336 RMD160 9821cfb1a35a12dc1062d50922b4c30e2369c72d SHA1 ce02784caa2723c62aad3d3c56268b6670d7bd46 SHA256 d733ec7be83c4dfb74e6dd39bed696550f6970b3ea10a6b06ec06d3f941e2e89
+MISC metadata.xml 307 RMD160 8099a5caece2eaff080527abc7afe5e9450529cc SHA1 320c0d5c09d54af0509e2aae64ea9370d8ba24ff SHA256 8d689c4bd9de4ad60c1edfb5015b9f3ed2f6b2dd52fbb44a1a99595a1997cfc8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkwGAZ8ACgkQV3J2n04EauxJMQCg1QrRc7mapN8ZWtl+TwexfUCr
-wYQAoMQcsqdAK2Fdhrjqh0y7jSGBUfD9
-=3DIx
+iEYEARECAAYFAkwGm78ACgkQeM7EJeUH71MxSACggqN1gHl5K1Lxu1fV5hQ3ndB4
+AwQAnib5aYU4ghhr83a2yjRxwqASw7Ur
+=pKb8
 -----END PGP SIGNATURE-----
