@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/IceRuby
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/IceRuby/Attic/ChangeLog,v 1.19 2010/06/02 07:00:42 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/IceRuby/Attic/ChangeLog,v 1.20 2010/06/02 17:58:17 graaff Exp $
+
+  02 Jun 2010; Hans de Graaff <graaff@gentoo.org> metadata.xml:
+  Add to ruby herd.
 
   02 Jun 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
   Remove caleb from metadata.xml (#317071)
